fix path to files

--- a/Dr_Semmelweis_Handwashing_Discovery.ipynb
+++ b/Dr_Semmelweis_Handwashing_Discovery.ipynb
@@ -138,9 +138,9 @@
       },
       "outputs": [],
       "source": [
-        "df_yearly = pd.read_csv('annual_deaths_by_clinic.csv')\n",
+        "df_yearly = pd.read_csv('data/annual_deaths_by_clinic.csv')\n",
         "# parse_dates avoids DateTime conversion later\n",
-        "df_monthly = pd.read_csv('monthly_deaths.csv', \n",
+        "df_monthly = pd.read_csv('data/monthly_deaths.csv', \n",
         "                      parse_dates=['date'])"
       ]
     },
