--- a/Dr_Semmelweis_Handwashing_Discovery.ipynb
+++ b/Dr_Semmelweis_Handwashing_Discovery.ipynb
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "kNoOuCg563de"
       },
@@ -106,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "YV7Y4mhp63dj"
       },
@@ -132,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "Wdr6_0pk63dh"
       },
@@ -163,21 +163,393 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "CDYyshRAHySR"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Monthly df shape: (98, 3)\n",
+            "Yearly df shape: (12, 4)\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(f'Monthly df shape: {df_monthly.shape}')\n",
+        "print(f'Yearly df shape: {df_yearly.shape}')"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "0CmnKF4_Hyg0"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Index(['date', 'births', 'deaths'], dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/plain": [
+              "Index(['year', 'births', 'deaths', 'clinic'], dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "display(df_monthly.columns)\n",
+        "display(df_yearly.columns)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Monthly data contains year from 1841 - 1849\n",
+            " Yearly data contains year from 1841 - 1846\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(f'Monthly data contains year from {df_monthly[\"date\"].min().year} - {df_monthly[\"date\"].max().year}')\n",
+        "print(f' Yearly data contains year from {df_yearly[\"year\"].min()} - {df_yearly[\"year\"].max()}')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "date      False\n",
+              "births    False\n",
+              "deaths    False\n",
+              "dtype: bool"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/plain": [
+              "year      False\n",
+              "births    False\n",
+              "deaths    False\n",
+              "clinic    False\n",
+              "dtype: bool"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "display(df_monthly.isna().any())\n",
+        "display(df_yearly.isna().any())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Average Number of birth per month: 267.0\n",
+            "Average Number of deaths per month: 22.46938775510204\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(f'Average Number of birth per month: {df_monthly[\"births\"].mean()}')\n",
+        "print(f'Average Number of deaths per month: {df_monthly[\"deaths\"].mean()}')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>date</th>\n",
+              "      <th>births</th>\n",
+              "      <th>deaths</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1841-01-01</td>\n",
+              "      <td>254</td>\n",
+              "      <td>37</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1841-02-01</td>\n",
+              "      <td>239</td>\n",
+              "      <td>18</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1841-03-01</td>\n",
+              "      <td>277</td>\n",
+              "      <td>12</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1841-04-01</td>\n",
+              "      <td>255</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1841-05-01</td>\n",
+              "      <td>255</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>93</th>\n",
+              "      <td>1848-11-01</td>\n",
+              "      <td>310</td>\n",
+              "      <td>9</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>94</th>\n",
+              "      <td>1848-12-01</td>\n",
+              "      <td>373</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>95</th>\n",
+              "      <td>1849-01-01</td>\n",
+              "      <td>403</td>\n",
+              "      <td>9</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>96</th>\n",
+              "      <td>1849-02-01</td>\n",
+              "      <td>389</td>\n",
+              "      <td>12</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>97</th>\n",
+              "      <td>1849-03-01</td>\n",
+              "      <td>406</td>\n",
+              "      <td>20</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>98 rows × 3 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "         date  births  deaths\n",
+              "0  1841-01-01     254      37\n",
+              "1  1841-02-01     239      18\n",
+              "2  1841-03-01     277      12\n",
+              "3  1841-04-01     255       4\n",
+              "4  1841-05-01     255       2\n",
+              "..        ...     ...     ...\n",
+              "93 1848-11-01     310       9\n",
+              "94 1848-12-01     373       5\n",
+              "95 1849-01-01     403       9\n",
+              "96 1849-02-01     389      12\n",
+              "97 1849-03-01     406      20\n",
+              "\n",
+              "[98 rows x 3 columns]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>year</th>\n",
+              "      <th>births</th>\n",
+              "      <th>deaths</th>\n",
+              "      <th>clinic</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1841</td>\n",
+              "      <td>3036</td>\n",
+              "      <td>237</td>\n",
+              "      <td>clinic 1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1842</td>\n",
+              "      <td>3287</td>\n",
+              "      <td>518</td>\n",
+              "      <td>clinic 1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1843</td>\n",
+              "      <td>3060</td>\n",
+              "      <td>274</td>\n",
+              "      <td>clinic 1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1844</td>\n",
+              "      <td>3157</td>\n",
+              "      <td>260</td>\n",
+              "      <td>clinic 1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1845</td>\n",
+              "      <td>3492</td>\n",
+              "      <td>241</td>\n",
+              "      <td>clinic 1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>1846</td>\n",
+              "      <td>4010</td>\n",
+              "      <td>459</td>\n",
+              "      <td>clinic 1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>1841</td>\n",
+              "      <td>2442</td>\n",
+              "      <td>86</td>\n",
+              "      <td>clinic 2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>1842</td>\n",
+              "      <td>2659</td>\n",
+              "      <td>202</td>\n",
+              "      <td>clinic 2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>1843</td>\n",
+              "      <td>2739</td>\n",
+              "      <td>164</td>\n",
+              "      <td>clinic 2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>1844</td>\n",
+              "      <td>2956</td>\n",
+              "      <td>68</td>\n",
+              "      <td>clinic 2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>1845</td>\n",
+              "      <td>3241</td>\n",
+              "      <td>66</td>\n",
+              "      <td>clinic 2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>1846</td>\n",
+              "      <td>3754</td>\n",
+              "      <td>105</td>\n",
+              "      <td>clinic 2</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    year  births  deaths    clinic\n",
+              "0   1841    3036     237  clinic 1\n",
+              "1   1842    3287     518  clinic 1\n",
+              "2   1843    3060     274  clinic 1\n",
+              "3   1844    3157     260  clinic 1\n",
+              "4   1845    3492     241  clinic 1\n",
+              "5   1846    4010     459  clinic 1\n",
+              "6   1841    2442      86  clinic 2\n",
+              "7   1842    2659     202  clinic 2\n",
+              "8   1843    2739     164  clinic 2\n",
+              "9   1844    2956      68  clinic 2\n",
+              "10  1845    3241      66  clinic 2\n",
+              "11  1846    3754     105  clinic 2"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "display(df_monthly)\n",
+        "display(df_yearly)"
+      ]
     },
     {
       "cell_type": "markdown",
