calculate the percentage of women died in 1840s when giving birth

--- a/Dr_Semmelweis_Handwashing_Discovery.ipynb
+++ b/Dr_Semmelweis_Handwashing_Discovery.ipynb
@@ -801,12 +801,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {
         "id": "qWcjo7O5H3g3"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Percentage of women when giving birth at the 1840s was: 7.08\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(f'Percentage of women when giving birth at the 1840s was: { \"%.2f\" % (df_yearly[\"deaths\"].sum() / df_yearly[\"births\"].sum() * 100)}')"
+      ]
     },
     {
       "cell_type": "markdown",
