calculate the average death rate prior to June 1846 and after

--- a/Dr_Semmelweis_Handwashing_Discovery.ipynb
+++ b/Dr_Semmelweis_Handwashing_Discovery.ipynb
@@ -2997,7 +2997,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 87,
       "metadata": {
         "id": "QFN7gYTD63eX"
       },
@@ -3022,21 +3022,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 95,
       "metadata": {
         "id": "Zv47y222ICFE"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "df_monthly['pct_deaths'] = df_monthly['deaths'] / df_monthly['births']\n",
+        "df_monthly_before_handwashing = df_monthly.loc[df_monthly.date < handwashing_start]\n",
+        "df_monthly_after_handwashing = df_monthly.loc[df_monthly.date > handwashing_start]"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 107,
       "metadata": {
         "id": "uwVulybHIBk_"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Average death rate before 1847 was 10.53%\n",
+            "Average death rate AFTER 1847 was 2.15%\n"
+          ]
+        }
+      ],
+      "source": [
+        "avg_before = df_monthly_before_handwashing[\"deaths\"].sum() / df_monthly_before_handwashing[\"births\"].sum() * 100\n",
+        "avg_after = df_monthly_after_handwashing[\"deaths\"].sum() / df_monthly_after_handwashing[\"births\"].sum() * 100\n",
+        "print(f'Average death rate before 1847 was {avg_before:.4}%')\n",
+        "print(f'Average death rate AFTER 1847 was {avg_after:.3}%')"
+      ]
     },
     {
       "cell_type": "markdown",
