Calculate a Rolling Average of the Death Rate before handwashing
fix df of after handwashing to include the date of starting

--- a/Dr_Semmelweis_Handwashing_Discovery.ipynb
+++ b/Dr_Semmelweis_Handwashing_Discovery.ipynb
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "eEEIIlY3N0oD"
       },
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "kNoOuCg563de"
       },
@@ -106,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "id": "YV7Y4mhp63dj"
       },
@@ -132,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "id": "Wdr6_0pk63dh"
       },
@@ -163,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "id": "CDYyshRAHySR"
       },
@@ -184,7 +184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "id": "0CmnKF4_Hyg0"
       },
@@ -215,7 +215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -234,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -253,7 +253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -526,7 +526,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {
         "id": "xdyyfk2oH0Ab"
       },
@@ -583,7 +583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {
         "id": "8emz_sBZH2GL"
       },
@@ -801,7 +801,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 12,
       "metadata": {
         "id": "qWcjo7O5H3g3"
       },
@@ -850,7 +850,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "metadata": {
         "id": "pSeMQxKMH52c"
       },
@@ -879,7 +879,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "metadata": {
         "id": "G9Zg86loH5a2"
       },
@@ -939,7 +939,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 15,
       "metadata": {
         "id": "Xg65zUR8H7c2"
       },
@@ -996,7 +996,7 @@
               "1  clinic 2     6       6       6"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1008,7 +1008,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 16,
       "metadata": {
         "id": "4aTJqbcVH9MG"
       },
@@ -1980,7 +1980,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 17,
       "metadata": {
         "id": "1His6I9tH-U7"
       },
@@ -1991,7 +1991,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 18,
       "metadata": {
         "id": "qjK489pIH-BF"
       },
@@ -2027,7 +2027,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 19,
       "metadata": {
         "id": "gRxQwbovH__L"
       },
@@ -2997,7 +2997,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 20,
       "metadata": {
         "id": "QFN7gYTD63eX"
       },
@@ -3022,7 +3022,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 21,
       "metadata": {
         "id": "Zv47y222ICFE"
       },
@@ -3030,12 +3030,12 @@
       "source": [
         "df_monthly['pct_deaths'] = df_monthly['deaths'] / df_monthly['births']\n",
         "df_monthly_before_handwashing = df_monthly.loc[df_monthly.date < handwashing_start]\n",
-        "df_monthly_after_handwashing = df_monthly.loc[df_monthly.date > handwashing_start]"
+        "df_monthly_after_handwashing = df_monthly.loc[df_monthly.date >= handwashing_start]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": 22,
       "metadata": {
         "id": "uwVulybHIBk_"
       },
@@ -3078,21 +3078,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "xh5skyLJIGJF"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "bw_rolling = df_monthly_before_handwashing.set_index('date')"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "KImHv9CuIEDQ"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "bw_rolling = df_monthly_before_handwashing['pct_deaths'].rolling(6).mean()"
+      ]
     },
     {
       "cell_type": "markdown",
