--- a/Dr_Semmelweis_Handwashing_Discovery.ipynb
+++ b/Dr_Semmelweis_Handwashing_Discovery.ipynb
@@ -3213,12 +3213,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 80,
       "metadata": {
         "id": "HJMSk8xYIIGX"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Chance of death during childbirth before handwashing: 10.5%.\n",
+            "Chance of death during childbirth after handwashing: 2.11%.\n",
+            "Handwashing reduced the monthly proportion of deaths by 8.4%!\n",
+            "This is a 5.0x improvement!\n"
+          ]
+        }
+      ],
+      "source": [
+        "bw_avg = df_monthly_before_handwashing.pct_deaths.mean() * 100\n",
+        "aw_avg = df_monthly_after_handwashing.pct_deaths.mean() * 100\n",
+        "print(f'Chance of death during childbirth before handwashing: {bw_avg:.3}%.')\n",
+        "print(f'Chance of death during childbirth after handwashing: {aw_avg:.3}%.')\n",
+        "\n",
+        "mean_diff = bw_avg - aw_avg\n",
+        "print(f'Handwashing reduced the monthly proportion of deaths by {mean_diff:.3}%!')\n",
+        "\n",
+        "times = bw_avg / aw_avg\n",
+        "print(f'This is a {times:.2}x improvement!')"
+      ]
     },
     {
       "cell_type": "markdown",
