calculate t_stat and p_value for before and after handwashing

--- a/Dr_Semmelweis_Handwashing_Discovery.ipynb
+++ b/Dr_Semmelweis_Handwashing_Discovery.ipynb
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 163,
+      "execution_count": 2,
       "metadata": {
         "id": "eEEIIlY3N0oD"
       },
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 164,
+      "execution_count": 3,
       "metadata": {
         "id": "kNoOuCg563de"
       },
@@ -92,7 +92,8 @@
         "import plotly.express as px\n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
-        "import matplotlib.dates as mdates"
+        "import matplotlib.dates as mdates\n",
+        "from scipy.stats import ttest_ind"
       ]
     },
     {
@@ -106,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 165,
+      "execution_count": 4,
       "metadata": {
         "id": "YV7Y4mhp63dj"
       },
@@ -132,7 +133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 166,
+      "execution_count": 5,
       "metadata": {
         "id": "Wdr6_0pk63dh"
       },
@@ -163,7 +164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 167,
+      "execution_count": 6,
       "metadata": {
         "id": "CDYyshRAHySR"
       },
@@ -184,7 +185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 168,
+      "execution_count": 7,
       "metadata": {
         "id": "0CmnKF4_Hyg0"
       },
@@ -215,7 +216,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 169,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -234,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 170,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -253,7 +254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 171,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -526,7 +527,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 172,
+      "execution_count": 11,
       "metadata": {
         "id": "xdyyfk2oH0Ab"
       },
@@ -583,7 +584,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 173,
+      "execution_count": 12,
       "metadata": {
         "id": "8emz_sBZH2GL"
       },
@@ -801,7 +802,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 174,
+      "execution_count": 13,
       "metadata": {
         "id": "qWcjo7O5H3g3"
       },
@@ -850,7 +851,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 175,
+      "execution_count": 14,
       "metadata": {
         "id": "pSeMQxKMH52c"
       },
@@ -879,7 +880,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 176,
+      "execution_count": 15,
       "metadata": {
         "id": "G9Zg86loH5a2"
       },
@@ -939,7 +940,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 177,
+      "execution_count": 16,
       "metadata": {
         "id": "Xg65zUR8H7c2"
       },
@@ -996,7 +997,7 @@
               "1  clinic 2     6       6       6"
             ]
           },
-          "execution_count": 177,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1008,7 +1009,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 178,
+      "execution_count": 17,
       "metadata": {
         "id": "4aTJqbcVH9MG"
       },
@@ -1980,7 +1981,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 179,
+      "execution_count": 18,
       "metadata": {
         "id": "1His6I9tH-U7"
       },
@@ -1991,7 +1992,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 180,
+      "execution_count": 19,
       "metadata": {
         "id": "qjK489pIH-BF"
       },
@@ -2027,7 +2028,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 181,
+      "execution_count": 20,
       "metadata": {
         "id": "gRxQwbovH__L"
       },
@@ -2997,7 +2998,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 182,
+      "execution_count": 21,
       "metadata": {
         "id": "QFN7gYTD63eX"
       },
@@ -3022,7 +3023,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 183,
+      "execution_count": 22,
       "metadata": {
         "id": "Zv47y222ICFE"
       },
@@ -3035,7 +3036,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 184,
+      "execution_count": 23,
       "metadata": {
         "id": "uwVulybHIBk_"
       },
@@ -3078,7 +3079,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 185,
+      "execution_count": 24,
       "metadata": {
         "id": "xh5skyLJIGJF"
       },
@@ -3089,7 +3090,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 186,
+      "execution_count": 25,
       "metadata": {
         "id": "KImHv9CuIEDQ"
       },
@@ -3119,7 +3120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 187,
+      "execution_count": 26,
       "metadata": {
         "id": "XPHokmgTIG32"
       },
@@ -3127,10 +3128,10 @@
         {
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x1dc3fee0190>"
+              "<matplotlib.legend.Legend at 0x228a7f59110>"
             ]
           },
-          "execution_count": 187,
+          "execution_count": 26,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -3213,7 +3214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 188,
+      "execution_count": 27,
       "metadata": {
         "id": "HJMSk8xYIIGX"
       },
@@ -3259,7 +3260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 189,
+      "execution_count": 28,
       "metadata": {
         "id": "RVqz63Y9IJXg"
       },
@@ -3270,7 +3271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 190,
+      "execution_count": 29,
       "metadata": {
         "id": "etNOMby-ILkv"
       },
@@ -4417,7 +4418,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 191,
+      "execution_count": 30,
       "metadata": {
         "id": "mgRoUP7NIMU9"
       },
@@ -5628,7 +5629,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 238,
+      "execution_count": 31,
       "metadata": {
         "id": "MKxD_c_cINxx"
       },
@@ -5636,10 +5637,10 @@
         {
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x1dc45d8d610>"
+              "<matplotlib.legend.Legend at 0x228a384d350>"
             ]
           },
-          "execution_count": 238,
+          "execution_count": 31,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -5679,15 +5680,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "yV8gUkLuINmX"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "F7lNXT7X63et"
@@ -5707,21 +5699,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
         "id": "3gG5RDz_IQLJ"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "p_value, t_stat = ttest_ind(df_monthly_before_handwashing['pct_deaths'], df_monthly_after_handwashing['pct_deaths'])"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {
         "id": "KQbDwe_GIP_G"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "p-palue is 5.5116072113\n",
+            "t-statstic is 2.985e-07\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(f'p-palue is {p_value:.10f}')\n",
+        "print(f't-statistic is {t_stat:.4}')"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -5733,15 +5739,6 @@
         "\n",
         "<img src=https://i.imgur.com/rvjNVzQ.gif>"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "3qNGdccG6D34"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
